# ConfigsJson

./: CMakeLists.txt  README.md  any_cfg.json
examples/: example.cpp
examples/configs/: any_cfg.json  cfg_file.json  config.json
lib/: CMakeLists.txt  config.cpp  config.hpp
tests/: config.json  orders.json  tests.cpp
